anthos-bundles/mitre-v2024/block-all-ingress.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockAllIngress
metadata:
  name: mitre-v2024-block-all-ingress
  labels:
    policycontroller.gke.io/bundleName: mitre-v2024
  annotations:
    policycontroller.gke.io/bundleVersion: 202402.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'mitre-v2024',
        bundleDisplayName: 'MITRE',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-mitre-v2024',
        bundleVersion: '202402.0-preview',
        bundleDescription: 'Use the MITRE policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the MITRE knowledge base of adversary tactics and techniques based on real-world observations.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the creation of Ingress objects.',
        remediation: 'Creating Ingress objects (`Ingress`, `Gateway`, and `Service` types of `NodePort` and `LoadBalancer`) is restricted. Remove the Ingress object or add it to the constraint allowList.  See "Ingress" for more information: https://kubernetes.io/docs/concepts/services-networking/ingress/',
        minimumTemplateLibraryVersion: '1.14.0',
        constraintHash: '47b3f54b79145a1a2013db8da8784b423fe5d320f56bf4fc4beae8c3c78f4ffe'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Service
      - apiGroups:
          - networking.k8s.io
        kinds:
          - Ingress
      - apiGroups:
          - '*'
        kinds:
          - Gateway
    excludedNamespaces:
      - apigee
  parameters:
    allowList:
      - ^istiod-asm-[0-9]{4}-[0-9]$
      - ^metrics-server$
      - ^kubernetes$
      - ^gke-connect-monitoring$
      - ^kube-dns$
      - ^istiod$
      - ^canonical-service-controller-manager-metrics-service$
      - ^default-http-backend$
      - ^otel-collector$
      - ^gatekeeper-webhook-service$
      - ^antrea$
      - ^istio-ingress$
      # Example of adding an allowed Ingress object
      - ^allowed-service$
