anthos-bundles/mitre-v2024/cronjob-restrict-repos.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sCronJobAllowedRepos
metadata:
  name: mitre-v2024-cronjob-restrict-repos
  annotations:
    policycontroller.gke.io/bundleVersion: 202402.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'mitre-v2024',
        bundleDisplayName: 'MITRE',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-mitre-v2024',
        bundleVersion: '202402.0-preview',
        bundleDescription: 'Use the MITRE policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the MITRE knowledge base of adversary tactics and techniques based on real-world observations.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts container images for `CronJob` to an allowed `repos` list.',
        remediation: 'Containers images must be in the allowed `repos` list. Use a different container image or add allowed repos to the `repos` parameter. See "Images" for more information: https://kubernetes.io/docs/concepts/containers/images/',
        minimumTemplateLibraryVersion: '1.17.2',
        constraintHash: 'cb134a71cae3b4fe4ad8615a145b87b137ed6e92dc6ecb919e2ab45903410dfd'
      }"
  labels:
    policycontroller.gke.io/bundleName: mitre-v2024
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - batch
        kinds:
          - CronJob
  parameters:
    repos:
      - gcr.io/gke-release/
      - gcr.io/anthos-baremetal-release/
      - gcr.io/gke-on-prem-release/
      - gcr.io/gke-multi-cloud-release/
      - gcr.io/config-management-release/
      - gcr.io/kubebuilder/
      - gcr.io/gkeconnect/
      - gke.gcr.io/
