anthos-bundles/mitre-v2024/require-binauthz.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireBinAuthZ
metadata:
  name: mitre-v2024-require-binauthz
  labels:
    policycontroller.gke.io/bundleName: mitre-v2024
  annotations:
    policycontroller.gke.io/bundleVersion: 202402.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'mitre-v2024',
        bundleDisplayName: 'MITRE',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-mitre-v2024',
        bundleVersion: '202402.0-preview',
        bundleDescription: 'Use the MITRE policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the MITRE knowledge base of adversary tactics and techniques based on real-world observations.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Requires the Binary Authorization Validating Admission Webhook.',
        remediation: 'Containers must use Binary Authorization for container image authenticity and attestation. See "Set up Binary Authorization" for more information: https://cloud.google.com/binary-authorization/docs/set-up-platform',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: '610a1f46831b68bbdda728e08a830e33f0741fff310a3fd4561be0d123e9d867'
      }"
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
  enforcementAction: dryrun
