anthos-bundles/mitre-v2024/require-namespace-networkpolicy.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceNetworkPolicies
metadata:
  name: mitre-v2024-require-namespace-networkpolicy
  labels:
    policycontroller.gke.io/bundleName: mitre-v2024
  annotations:
    policycontroller.gke.io/bundleVersion: 202402.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'mitre-v2024',
        bundleDisplayName: 'MITRE',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-mitre-v2024',
        bundleVersion: '202402.0-preview',
        bundleDescription: 'Use the MITRE policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the MITRE knowledge base of adversary tactics and techniques based on real-world observations.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Requires that every namespace defined in the cluster has a NetworkPolicy.',
        remediation: 'Cannot have a namespace in the cluster without a NetworkPolicy. Add a NetworkPolicy to your namespace. See "Network Policies" for more information: https://kubernetes.io/docs/concepts/services-networking/network-policies',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: '00c87f4b3e9fa7767959d337b4352d41c3691c501af2a94abf43c3b3eb505652'
      }"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
      - capi-system
      - vm-system
      - gke-managed-metrics-server
      - cert-manager
      - anthos-creds
      - capi-kubeadm-bootstrap-system
      - gke-system
      - anthos-identity-service
      - gmp-system
      - gmp-public
      - gke-gmp-system
      - gke-managed-filestorecsi
      - apigee
      - apigee-system
      - gke-managed-system
      - gke-managed-cim
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
