anthos-bundles/mitre-v2024/restrict-automountserviceaccounttoken.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictAutomountServiceAccountTokens
metadata:
  name: mitre-v2024-restrict-automountserviceaccounttoken
  labels:
    policycontroller.gke.io/bundleName: mitre-v2024
  annotations:
    policycontroller.gke.io/bundleVersion: 202402.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'mitre-v2024',
        bundleDisplayName: 'MITRE',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-mitre-v2024',
        bundleVersion: '202402.0-preview',
        bundleDescription: 'Use the MITRE policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the MITRE knowledge base of adversary tactics and techniques based on real-world observations.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the use of service accounts tokens.',
        remediation: 'The use of service account tokens for pods is restricted. Remove `automountServiceAccountToken: true` from `Pod` and `ServiceAccount`.  See "Configure Service Accounts for Pods" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: '0c15dd39a55d65c92917f3d50f19d0db930e053f4ad66ed50959b7a85da4231b'
      }"
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
          - ServiceAccount
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - gmp-system
      - cert-manager
      - gke-gmp-system
      - apigee
  enforcementAction: dryrun
