anthos-bundles/mitre-v2024/restrict-hostpath-volumes.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: mitre-v2024-restrict-hostpath-volumes
  labels:
    policycontroller.gke.io/bundleName: mitre-v2024
  annotations:
    policycontroller.gke.io/bundleVersion: 202402.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'mitre-v2024',
        bundleDisplayName: 'MITRE',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-mitre-v2024',
        bundleVersion: '202402.0-preview',
        bundleDescription: 'Use the MITRE policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the MITRE knowledge base of adversary tactics and techniques based on real-world observations.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the use of `HostPath` volumes.',
        remediation: 'Cannot use `HostPath` volumes. Remove all `HostPath` volumes from your containers.',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: 'ac2b1d2421c0821ced9ee2436cc71e8325156195c93b5f23edde87a79847e9ca'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
      - gke-system
