anthos-bundles/mitre-v2024/restrict-role-secrets.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleRules
metadata:
  name: mitre-v2024-restrict-role-secrets
  labels:
    policycontroller.gke.io/bundleName: mitre-v2024
  annotations:
    policycontroller.gke.io/bundleVersion: 202402.0-preview
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'mitre-v2024',
        bundleDisplayName: 'MITRE',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-mitre-v2024',
        bundleVersion: '202402.0-preview',
        bundleDescription: 'Use the MITRE policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the MITRE knowledge base of adversary tactics and techniques based on real-world observations.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the use of secrets in `Roles` and `ClusterRoles`.',
        remediation: 'The use of secrets permission in `Roles` and `ClusterRoles` is restricted. Remove all secret rules from your `Roles` and `ClusterRoles`. See "RoleBinding and ClusterRoleBinding" for more information: https://kubernetes.io/docs/reference/access-authn-authz/rbac/#rolebinding-and-clusterrolebinding',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: '18bfe530c0d7097b94831126846b2b5280dcffdbd33039b20c1186d4218f606b'
      }"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - anthos-identity-service
      - cert-manager
      - gatekeeper-system
      - gke-connect
      - gke-gmp-system
      - gke-system
      - gmp-public
      - gmp-system
      - kube-system
      - apigee
    kinds:
      - apiGroups:
          - rbac.authorization.k8s.io
        kinds:
          - Role
          - ClusterRole
  parameters:
    disallowedRules:
      - apiGroups:
          - ""
        resources:
          - secrets
        verbs:
          - get
          - list
          - watch
    exemptions:
      clusterRoles:
        - name: ^anthos-baremetal-operator.+$
          regexMatch: true
        - name: ^cap-manager-role.+$
          regexMatch: true
        - name: capi-aggregated-manager-role
        - name: ^capi-kubeadm-bootstrap-manager-role.+$
          regexMatch: true
        - name: ^capi-manager-role.+$
          regexMatch: true
        - name: cert-manager-cainjector
        - name: ^cert-manager-controller.+$
          regexMatch: true
        - name: cert-manager-controller-challenges
        - name: cert-manager-controller-clusterissuers
        - name: cert-manager-controller-certificates
        - name: cert-manager-controller-issuers
        - name: cert-manager-controller-orders
        - name: cluster-admin
        - name: gkeonprem-p4sa
        - name: kube-state-metrics
        - name: istiod-gke-system
        - name: lifecycle-controllers-deployer
        - name: lifecycle-controllers-manager
        - name: ^preflightcheck-operator.+$
          regexMatch: true
        - name: stackdriver-operator
        - name: system:controller:clusterrole-aggregation-controller
        - name: system:controller:expand-controller
        - name: system:controller:generic-garbage-collector
        - name: system:controller:namespace-controller
        - name: system:controller:persistent-volume-binder
        - name: system:kube-controller-manager
        - name: system:gcp-controller-manager
        - name: vmruntime-vmruntime-manager-role
        # for GKE
        - name: admin
        - name: edit
        - name: servicemesh
        - name: system:aggregate-to-edit
        - name: system:controller:resourcequota-controller
        - name: system:gke-common-webhooks
        - name: system:glbc-status
        - name: metering
        - name: gatekeeper-manager-role
        - name: system:kubestore-collector
        - name: system:cloud-controller-manager
        - name: system:cloud-controller-manager
        - name: istio-reader-clusterrole-managed
        - name: config-management-operator
        - name: system:node
        - name: resource-group-manager-role
        - name: policycontroller
        # for Apigee
        - name: ^apigee.*$
          regexMatch: true
